# LAAP-Living-Agent-Application-Protocol-

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DIGITAL_LIFEFORM_BLUEPRINT.md  Dockerfile  Dockerfile.rag  INTRODUCTION.md  LAAP_COMPLETE_ENGINEERING_PLAN.md  LAAP_UPGRADE_PLAN.md  LAAP协议工程实现可行性分析报告.md  LAAP数字生命体终极方案报告.md  PLAN_LAAP_UPGRADE.md  README.md  ROADMAP.md  SECURITY.md  _test_cmd.bat  diagnose.bat  docker-compose.yml  install.bat  install.py  install.sh  laap.bat  laap.ps1  laap.py  laap_simple.py  launcher.ps1  pyproject.toml  requirements-rag.txt  requirements.txt  run_laap.py  run_webserver.py  setup.py  setup_path.bat
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  version-bump.yml
analysis/: AEvo_Algorithm_Analysis.md  Integration_Upgrade_Plan.md  QLAM_Algorithm_Analysis.md  README.md
core/: Cargo.toml
core/src/: lib.rs
demo/: index.html
docs/: architecture-overview.md  cli-commands.md  cognitive-architecture.md  mcp-integration.md  quickstart.md  security-model.md
docs/deployment/: k8s-guide.md  scaling-guide.md
docs/engine/: evolution-4zone.md  memory-hierarchy.md
docs/protocol/: LAAP-SYNC.md  LAAP-UI.md
docs/verification-maps/: v001-security.md
examples/: basic_lifelike.py  codex_demo.py  multi_agent.py  psi_demo.py  rsi_demo.py  showcase.py
hermes-agent-LAAP数字生命版/hermes-agent-LAAP/: VERSION.json  laap-hermes  laap-hermes-v5.ps1  laap-hermes.ps1  laap-sync-version.py  laap.bat  laap_bridge_agent.py
installers/: install-uv.ps1  install-uv.sh  install.ps1  install.sh
laap/: __init__.py  __main__.py  logo_ascii.py
laap/agent/: __init__.py  base.py  codex.py  context.py  lifelike.py
laap/agent_core/: __init__.py  agent.py  background_review.py  chat.html  config_manager.py  context.py  context_compressor.py  conversation_loop.py  credential_pool.py  cron.py  display.py  executor.py  file_safety.py  gateway.py  llm_adapters.py  llm_provider.py  mcp_bridge.py  mcp_integration.py  memory_bridge.py  memory_manager.py  planner.py  prompt_builder.py  providers.py  rate_limiter.py  streaming_server.py  tool_manager.py  turn_context.py
laap/api/: __init__.py  cli.py  cli_entry.py  rest.py  server.py  websocket.py
laap/cli/: commands.py  config_manager.py  config_validate.py  dashboard.py  logo_art.py  main.py  profiles.py  repl.py  webhook_commands.py  wizard.py
laap/cognition/: __init__.py  awareness.py  emotion.py  goals.py  needs.py
laap/core/: green_contract.py
laap/cron/: __init__.py  reminder.py  scheduler.py
laap/editor/: path_scope.py
laap/engine/: __init__.py
laap/evaluation/: __init__.py  fitness.py  stability.py
laap/events/: __init__.py  bus.py
laap/evolution/: __init__.py  mutation.py  rsi.py  sandbox.py  symbolic.py
laap/gateway/: __init__.py  base.py  engine.py  events.py  webhook_server.py  webhooks.py
laap/git/: branch_lock.py  operations.py
laap/growth/: __init__.py
laap/infrastructure/: __init__.py
laap/lifeform/: __init__.py  physiology.py  self_awareness.py  voice.py
laap/llm/: __init__.py  credential_pool.py  discovery.py  factory.py  provider.py
laap/mcp/: __init__.py  client.py  config.py  lifecycle.py  oauth.py  server.py
laap/memory/: __init__.py  hierarchical.py  manager.py  persistent.py  provider.py
laap/orchestration/: __init__.py  protocol.py  shared_state.py  swarm.py
laap/permissions/: __init__.py  enforcer.py  policy.py
laap/plugins/: __init__.py  hooks.py  manager.py
laap/protocol/: __init__.py  codec.py  laap_com.py  laap_id.py  laap_life.py  laap_mem.py  laap_sync.py  laap_ui.py  registry.py  validator.py
laap/qlam/: core.py  measurement.py  pqc.py  quantum_state.py
laap/rag/: __init__.py  api.py  (+5 more)
laap_brain/: __init__.py  diagnostic.py  integrate.py
scripts/: benchmark.py  generate_proto.py  install_smoke_test.py  seed_data.py  test_agent_complete.py
tests/: conftest.py  fixtures.py  test_aevo_integration.py  test_agent.py  test_agent_core.py  test_cli.py  test_codex.py  test_cognition_core.py  test_discovery.py  test_dragon_logo.py  test_engine_evolution.py  test_engine_memory.py  test_events.py  test_fitness.py  test_hooks.py  test_integration.py  test_lifeform.py  test_lifelike.py  test_llm_provider.py  test_mcp.py  test_memory_hierarchical.py  test_needs.py  test_path_scope.py  test_permissions.py  test_platforms.py  test_plugins.py  test_production.py  test_profiles.py  test_protocol.py  test_rag.py  test_rsi_engine.py  test_sandbox.py  test_security.py  test_session_manager.py  test_session_persistence.py  test_session_search.py  test_skills.py  test_stability.py  test_stream_handler.py  test_tasks.py  (+3 more)
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
(+261 files in other folders)
