[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laap"
version = "0.3.3"
description = "LAAP - Lifeform Autonomous Adaptive Protocol (自进化引擎意识生命体)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "LAAP Team"}]
keywords = ["agent", "ai", "cognitive", "psi", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Life",
]

dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "docstring-parser>=0.15",
    # CLI banner / colour rendering — pulled in by default so a bare
    # `uv tool install laap` gives the user a working `laap` command
    # out of the box.
    "rich>=13.0.0",
]

[project.optional-dependencies]
# TUI extras
tui = ["textual>=0.60.0"]
# LLM provider SDKs
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
deepseek = ["openai>=1.0.0"]
ollama = ["httpx>=0.27.0"]
# HTTP gateway
api = ["fastapi>=0.104.0", "uvicorn>=0.24.0"]
# Vector store + embeddings
rag = ["qdrant-client>=1.9.0", "sentence-transformers>=2.2.0"]
# Developer tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]
all = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pytest>=7.4.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.2.0",
]


[project.urls]
Homepage = "https://github.com/lorryjovens-hub/LAAP-Living-Agent-Application-Protocol-"
Documentation = "https://github.com/lorryjovens-hub/LAAP-Living-Agent-Application-Protocol-/blob/main/README.md"
Source = "https://github.com/lorryjovens-hub/LAAP-Living-Agent-Application-Protocol-"
"Bug Tracker" = "https://github.com/lorryjovens-hub/LAAP-Living-Agent-Application-Protocol-/issues"
Changelog = "https://github.com/lorryjovens-hub/LAAP-Living-Agent-Application-Protocol-/blob/main/CHANGELOG.md"

[project.scripts]
laap = "laap.api.cli:main"

[tool.setuptools]
# Explicit package list — avoids the slow find-on-filesystem scan
# of D:\LAAP that previously caused `uv tool install` to hang at
# "Preparing packages... (17/18)" for minutes.
packages = [
    "laap",
    "laap.agent",
    "laap.api",
    "laap.cli",
    "laap.cli.skins",
    "laap.cli.wizard",
    "laap.cognition",
    "laap.cron",
    "laap.editor",
    "laap.editor.operations",
    "laap.editor.search",
    "laap.evaluation",
    "laap.events",
    "laap.evolution",
    "laap.evolution.aevo",
    "laap.gateway",
    "laap.gateway.platforms",
    "laap.git",
    "laap.lifeform",
    "laap.llm",
    "laap.mcp",
    "laap.memory",
    "laap.memory.providers",
    "laap.memory.quantum",
    "laap.memory.rust_backend",
    "laap.orchestration",
    "laap.permissions",
    "laap.plugins",
    "laap.protocol",
    "laap.rag",
    "laap.shell",
    "laap.skills",
    "laap.store",
    "laap.tasks",
    "laap.telemetry",
    "laap.tools",
    "laap.ui",
    "laap.utils",
    "laap.web",
    "laap.web_sdk",
    "laap.workflow",
]
include-package-data = true

[tool.setuptools.package-data]
laap = ["*.pyd", "*.so", "*.json", "*.css", "*.js", "*.html", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.coverage.run]
source = ["laap"]
omit = ["*/tests/*", "*/__pycache__/*"]
