[package]
name = "laap-core"
version = "0.3.0"
edition = "2021"
description = "LAAP Core Engine - Rust performance layer for LAAP agent"

[lib]
name = "laap_core"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
